# mediocreditofacile

./: .gitignore  CLAUDE.md  DESIGN.md  astro.config.mjs  package-lock.json  package.json  vercel.json
mcf-ads-engine/: .env.example  .gitignore  CLAUDE.md  README.md  apply_restructuring.py  campaign_audit.py  config.yaml  diagnose_ads.py  fix_ad_urls_and_copy.py  generate_report.py  google-ads.yaml.example  main.py  pyproject.toml  reactivate_keywords.py  request_ad_review.py  setup_auth.py  setup_ristorazione_adgroup.py  switch_finanza_veloce_cpc.py  update_fotovoltaico.py
mcf-ads-engine/.claude/: settings.json
mcf-ads-engine/analyzer/: anomaly.py  budget_advisor.py  campaign_audit.py  negatives.py  scorer.py  search_terms.py  suggester.py
mcf-ads-engine/collector/: google_ads.py
mcf-ads-engine/dashboard/: server.py
mcf-ads-engine/dashboard/templates/: audit.html  index.html
mcf-ads-engine/data/: exclusions.yaml
mcf-ads-engine/data/negatives/: 2026-03-12.json
mcf-ads-engine/generator/: campaign.py  copy.py  landing.py  report_docx.py
mcf-ads-engine/notifier/: email.py
mcf-ads-engine/scheduler/: it.mediocreditofacile.adsengine.plist
mcf-ads-engine/scripts/: claude-md-staleness.sh
mcf-ads-engine/tests/: test_anomaly.py  test_budget_advisor.py  test_claude_md.py  test_collector.py  test_generator_campaign.py  test_generator_landing.py  test_main.py  test_negatives.py  test_notifier.py  test_scorer.py  test_search_terms.py  test_server.py  test_suggester.py  test_writer.py
mcf-ads-engine/utils/: claude_md.py
mcf-ads-engine/writer/: google_ads.py
(+144 files in other folders)
